# libshell

./: CMakeLists.txt  README.md  makefile
config/: cmd.xml
include/: cli_config.h  cli_public.h  cli_server.h  cli_shell.h
src/: cli_config.cpp  cli_server.cpp  cli_shell.cpp
test/: makefile  myserv.cpp  myshell.cpp  tester.cpp
